landing-page:fixed minor layout bugs

--- a/landing-page/styles/index.css
+++ b/landing-page/styles/index.css
@@ -314,7 +314,6 @@ main {
 @media screen and (max-width: 490px) {
   .navigation__bar {
     position: fixed;
-    width: 100%;
     top: 0;
     left: 0;
     height: 0;
@@ -336,7 +335,7 @@ main {
     color: #0066ff;
     text-shadow: none;
     font-size: 1rem;
-    padding: 0.7rem 0.7rem 0.9rem 0.7rem;
+    padding: 0.7rem;
     border-top: 1.5px solid rgba(255, 255, 255, 0.7);
     border-left: 1.5px solid rgba(255, 255, 255, 0.7);
     box-shadow: 0 0 1.2rem rgba(0, 0, 0, 0.4);
@@ -354,8 +353,7 @@ main {
     border-radius: 0.8rem;
     box-shadow: 0 0 1.4rem rgba(0, 0, 0, 0.4);
     font-weight: bold;
-    background: rgba(255, 255, 255, 0.7);
-    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.9);
   }
   .navigation__menu_show {
     animation: menu-fade-in 0.2s linear;
